# AI-customer-support-platform

./: .gitignore  README.md  alembic.ini  pyproject.toml
config/: __init__.py  database.py
database/alembic/: env.py
database/alembic/versions/: dabf72f6e525_init.py
database/models/: channel.py  customer.py  dialog.py  document.py  message.py  order.py  support_ticket.py  user.py
database/repositoties/: channel_repository.py  customer_repository.py  dialog_repository.py  document_repository.py  message_repository.py  order_repository.py  ticket_repository.py  user_repository.py
utils/enums/: categories.py  channel_status.py  dialog_status.py  document_file_status.py  message_status.py  order_status.py  ticket_status.py
