[project]
name = "ai-customer-support-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
